# acta

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tailwind.prose.config.js  vitest.config.js
acta/: asgi.py  context_processors.py  urls.py  version.py
acta/settings/: base.py  dev.py  prod.py
apps/accounts/: adapters.py  admin.py  auth.py  middleware.py  models.py  urls.py  views.py
apps/activity/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/attachments/: admin.py  apps.py  images.py  models.py  services.py  serving.py  signals.py
apps/comments/: admin.py  models.py  serializers.py  views.py
apps/common/: markdown.py  scheduled.py
apps/cycles/: admin.py  apps.py  models.py  services.py
apps/labels/: admin.py  apps.py  defaults.py  models.py  palette.py  serializers.py  services.py  signals.py  urls.py  views.py
apps/mcp/: apps.py  auth.py  context.py  server.py  urls.py  views.py
apps/notifications/: admin.py  models.py  services.py
apps/projects/: admin.py  apps.py  icons.py  models.py  serializers.py  urls.py  views.py
apps/reactions/: admin.py  apps.py  (+2 more)
docs/: README.md  deployment.md  mcp.md  operations.md
requirements/: base.txt  dev.txt  prod.txt
scripts/: build_lucide_sprite.py  check_template_comments.py  extract_lucide.py  rewrite_theme_tokens.py
templates/: base.html  base_app.html  base_auth.html
(+413 files in other folders)
